--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     </div>
   </body>
   <script>
-
+  const main = document.getElementById('main');
+  main.addEventListener('click', function(event) {
+    alert('I was clicked!');
+  });
   </script>
 
   </script>>
