--- a/index.html
+++ b/index.html
@@ -39,9 +39,19 @@
     </div>
   </body>
   <script>
+//Main Click listener
   const main = document.getElementById('main');
   main.addEventListener('click', function(event) {
     alert('I was clicked!');
   });
+  const input = document.querySelector('input')
+ //input listener - prevent G key from ebing typed
+input.addEventListener('keydown', function(e) {
+  if (e.key === "g") {
+    return e.preventDefault()
+  } else {
+    console.log(e.key)
+  }
+});
   </script>
 </html>
