Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -53,5 +53,18 @@ input.addEventListener('keydown', function(e) {
     console.log(e.key)
   }
 });
+//bubble event for Div elements
+const divs = document.querySelectorAll('div');
+ 
+function bubble(e) {
+  // stop! that! propagation!
+  e.stopPropagation();
+ 
+  console.log(this.firstChild.nodeValue.trim() + ' bubbled');
+}
+ 
+for (let i = 0; i < divs.length; i++) {
+  divs[i].addEventListener('click', bubble);
+}
   </script>
 </html>
