Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 const divs = document.querySelectorAll('div');
 
 for (let i = 0; i < divs.length; i++) {
-  divs[i].addEventListener('click', bubble);
+  divs[i].addEventListener('click', index.js.bubble);
 }
   </script>
 </html>
