Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
        min-height: 12px;
      }
     </style>
+    <script src="index.js"></script>
   </head>
 
   <body>
@@ -58,7 +59,7 @@
 const divs = document.querySelectorAll('div');
 
 for (let i = 0; i < divs.length; i++) {
-  divs[i].addEventListener('click', index.js.bubble);
+  divs[i].addEventListener('click', bubble);
 }
   </script>
 </html>
