Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
        min-height: 12px;
      }
     </style>
-    <script src="index.js"></script>
   </head>
 
   <body>
@@ -57,6 +56,13 @@
 });
 //bubble event for Div elements
 const divs = document.querySelectorAll('div');
+
+function bubble(e) {
+  // stop! that! propagation!
+  e.stopPropagation();
+
+  console.log(this.firstChild.nodeValue.trim() + ' bubbled');
+}
 
 for (let i = 0; i < divs.length; i++) {
   divs[i].addEventListener('click', bubble);
